# Tweet_sentiment_predict

./: README.md  pyproject.toml  tweet_model.pkl
notebooks/: Tweet_modelling.ipynb  ebay_model.pkl  modelling.ipynb
src/: app.py
src/db/: connection.py
src/models/: tweet.py
src/utils/: model_utils.py
